Tue Aug  7 15:45:42 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/PluggableUDP/tests/SimplePerformance/test.idl (Simple_Server): 
  
          Added a comment to make it clear that twoway operations don't
          work with DIOP.  Thanks to Ali Akbar Zarezadeh <akzare at cs dot
          uni-potsdam dot de> for reporting this.

Thu Aug  9 15:10:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/FaultTolerance/FT_Invocation_Endpoint_Selectors.cpp:
          Reverted this change until I can work out what has changed
          from when this change was valid.

Thu Aug  9 08:33:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/FaultTolerance/FT_Invocation_Endpoint_Selectors.cpp:
          Fixed race condition.

Thu Aug  9 07:20:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * tao/String_Alloc.cpp:
          Removed trailing whitespace.

        * orbsvcs/tests/Miop/McastPreferredInterfaces/TestC.cpp:
        * orbsvcs/tests/Miop/McastPreferredInterfaces/TestC.h:
        * orbsvcs/tests/Miop/McastPreferredInterfaces/TestC.inl:
        * orbsvcs/tests/Miop/McastPreferredInterfaces/TestS.cpp:
        * orbsvcs/tests/Miop/McastPreferredInterfaces/TestS.h:
          Removed these generated files they shouldn't have been committed.

Wed Aug  8 15:20:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * NEWS:
        * tao/String_Alloc.cpp:

          Enhanced CORBA::string_dup() and CORBA::string_free() to use
          non-allocated and shared static null strings, this allows for
          optimized default null string initialization in CORBA string
          members and a reduction in dynamic memory management required
          for such. This enhancement can be removed by including
          #define TAO_NO_SHARED_NULL_CORBA_STRING in the config.h
          NOTE that it is a (CORBA spec) requirement that all